public/css/style.css
:root {
	--color: #1e1f21;
	--color-lighter: #27282a;
	--color-accent: #0f9b14;
	--color-accent-darker: #0b7a0f;
	--text-size: 1.1em;
	--code-size: 0.8em;
	--quote-size: 0.9em;
}

@font-face {
	font-family: "QuickSand";
	src: url("./Quicksand-Medium.ttf");
}

@font-face {
	font-family: "QuickSandBold";
	src: url("./Quicksand-Bold.ttf");
}

@font-face {
	font-family: "ABeeZee";
	src: url("./ABeeZee-Italic.ttf");
}

@font-face {
	font-family: "RobotoMono";
	src: url("./RobotoMono-Regular.ttf");
}

html {
	margin: 0px;
	min-width: 100%;
	min-height: calc(100% - 64px);
	margin-top: 64px;
	scroll-behavior: smooth;
}

body {
	display: flex;
	flex-direction: column;
	color: white;
	background-color: var(--color-lighter);
	font-family: "QuickSand";
	font-size: var(--text-size);
	min-width: 100%;
	/*height: 100%;*/
	min-height: calc(100vh - 64px);
	margin: 0px;
	word-break: break-word;
}

.can-grow {
	flex-grow: 1000000000;
}

.background-image {
	z-index: -10;
	position: absolute;
	top: 64px;
	left: 0px;
	width: 100%;
	padding: 0px;
	margin: 0px;
	height: auto;

	overflow: hidden;
	max-height: 50vh;
}

.background-image>img {
	width: 100%;
	height: auto;
}

.page-title {
	font-size: 3em;
	text-align: center;
	padding-top: 50px;
	padding-bottom: 50px;

}

.main_container {

	margin: 0px;
	/*margin-left: auto;
	margin-right: auto;*/
	width: 80%;
	height: 100%;


}

.main-text {
	background-color: var(--color);
	padding-top: 20px;
	padding-bottom: 20px;
	padding-left: 20px;
	padding-right: 20px;
}

button {
	background-color: rgba(0, 0, 0, 0);
	border: solid 3px var(--color-accent-darker);
	border-radius: 5px;
	padding: 5px;
	font-size: 1em;
	color: white;
	height: 2.2em;
	transition: all 0.5s;
}

button:hover {
	background-color: var(--color-accent);
}

button:active {
	transition: all 0.2s;
	background-color: var(--color-accent-darker);
	border: solid 3px var(--color-accent);
}

.profile-button {
	height: 2.2em;
	border-radius: 100%;
	width: auto;
}

footer {
	margin-top: 30px;
	background-color: var(--color-lighter);
}

.quote {
	font-family: "ABeeZee";
	padding: 10px;
	font-size: var(--quote-size);
}

.quote:before {
	content: '" ';
}

.quote:after {
	content: ' "';
}

/*code container*/
.code_container {
	background-color: var(--color-lighter);
	display: flex;
	flex-direction: column;
	border-radius: 5px;
	margin-top: 10px;
	margin-bottom: 10px;
}

.code_container>div {
	display: flex;
	justify-content: space-between;
	padding: 10px;
	border-bottom: 2px solid var(--color);
	align-items: center;
}

.code_container>div+div {
	display: inline-block;
	font-family: "RobotoMono";
	padding: 10px;
	font-size: var(--code-size);
	overflow: auto;
}

.code_container>div+div>p {
	margin: 0px;
	padding: 0px;
}


a {
	transition: all 0.3s;
	color: var(--color-accent-darker);
	font-family: "QuickSandBold";
	text-decoration: initial;
}

a:hover {
	color: var(--color-accent);
}

.title-link {
	color: white;
	transition: all 0.3s;
	font-family: "QuickSand";
	text-decoration: underline;
	cursor: pointer;
}

#navBar {
	position: fixed;
	top: 0;
	background-color: var(--color-lighter);
	display: flex;
	align-items: center;
	flex-wrap: wrap;
	justify-content: space-around;
	padding: 10px;
	-webkit-box-shadow: 10px 10px 62px 0px rgba(0, 0, 0, 0.75);
	-moz-box-shadow: 10px 10px 62px 0px rgba(0, 0, 0, 0.75);
	box-shadow: 10px 10px 62px 0px rgba(0, 0, 0, 0.75);
	width: calc(100% - 20px);
	z-index: 10000000;
}

#menu {
	display: none;
	border: none;
}

#menu>img {
	display: inline-block;
	height: 100%;
}

#navBar div:last-child() {
	width: 50%;
}


#website-title {
	/*font-size: 2.2em;
	cursor: default;*/
	transition: all 0.5s;
}

#website-title>img {
	height: 40px;
	width: auto;
}

footer {
	display: flex;
	align-items: center;
	flex-wrap: wrap;
	justify-content: space-around;
	padding: 10px;
	-webkit-box-shadow: 10px 10px 62px 0px rgba(0, 0, 0, 0.75);
	-moz-box-shadow: 10px 10px 62px 0px rgba(0, 0, 0, 0.75);
	box-shadow: 10px 10px 62px 0px rgba(0, 0, 0, 0.75);
}

/*containers*/
.h-container {
	display: flex;
	flex-direction: row;
	justify-content: space-around;
	align-items: flex-start;
	flex-wrap: wrap;
}

.category{
	cursor: pointer;
	margin: 5px;
	flex-grow: 1;
	flex-basis: 400px !important;
	background-color: var(--color-lighter);
	transition: all 0.5s;
}
.category:hover {
	background-color: var(--color-accent-darker);
	margin: 1px;
	padding: 4px;
	-webkit-box-shadow: 10px 10px 62px 0px rgba(0, 0, 0, 0.75);
	-moz-box-shadow: 10px 10px 62px 0px rgba(0, 0, 0, 0.75);
	box-shadow: 10px 10px 62px 0px rgba(0, 0, 0, 0.75);
	z-index: 100;
}
.category > p {
	margin-top: 8px;
	margin-bottom: 8px;
	width: calc(100% - 20px) !important;
	margin-left: 10px;
	margin-right: 10px;
}
.category-row {
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
}

.category-object-list {
	display: flex;
	flex-direction: row;
}
.category-list {
	display: flex;
	flex-direction: column;
}

.category-list-element {
	cursor: pointer;
	margin: 5px;
	flex-grow: 1;
	width: calc(100% - 10px) !important;
	background-color: var(--color-lighter);
	transition: all 0.5s;
}
.category-list-element:hover {
	background-color: var(--color-accent-darker);
	margin: 1px;
	padding: 4px;
	-webkit-box-shadow: 10px 10px 62px 0px rgba(0, 0, 0, 0.75);
	-moz-box-shadow: 10px 10px 62px 0px rgba(0, 0, 0, 0.75);
	box-shadow: 10px 10px 62px 0px rgba(0, 0, 0, 0.75);
	z-index: 100;
}
.category-list-element > p {
	margin-top: 8px;
	margin-bottom: 8px;
	width: calc(100% - 20px) !important;
	margin-left: 10px;
	margin-right: 10px;
}

.image-grid {
	display: flex;
	flex-direction: column;
	width: 100%;
}
.image-grid-row {
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
}
.image-grid-col {
	cursor: pointer;
	margin: 5px;
	flex-basis: 300px !important;
	flex-grow: 1;
	background-color: var(--color-lighter);
	transition: all 0.5s;
}
.image-grid-col > div {
	background-size: contain;
	background-repeat: no-repeat;
	background-position: center;
	background-size: 95%;
}
/* ... */

